[tool.poetry]
name = "babe-api"
version = "0.1.0"
description = ""
authors = ["Yigal Igor Maksimov <yigal.maksimov@gmail.com>"]
readme = "README.md"
packages = [{include = "babe_api"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djoser = "^2.1.0"
django-cors-headers = "^3.14.0"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
